Bug 1815481: Disable hardware WebRender on Mesa drivers in Virtual Machines. r=rmader

We classify anything with 'mesa/vmgfx' as a Virtual Machine driver and
block it for Linux.

Differential Revision: https://phabricator.services.mozilla.com/D179864