widget/GfxDriverInfo.h
@@ -243,6 +243,8 @@ enum DriverVendor : uint8_t {
   SoftwareMesaAll,
   // Wildcard for all non-Intel/NVIDIA/ATI Mesa drivers.
   MesaNonIntelNvidiaAtiAll,
+  // Running in VM.
+  MesaVM,
 
   Max
 };
